--- a/.gitignore
+++ b/.gitignore
@@ -381,7 +381,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-
+.gitignore
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
